force-app/main/default/objects/Account/fields/Campo_prueba__c.field-meta.xml
<CustomField>
    <fullName>Campo_prueba__c</fullName>
    <label>Campo prueba</label>
    <length>255</length>
    <type>Text</type>
</CustomField>