force-app/main/default/objects/Account/fields/Numero_de_prueba__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_prueba__c</fullName>
    <label>Numero de pruebas 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>