force-app/main/default/objects/Account/fields/Texto_de_prueba__c.field-meta.xml
<CustomField>
    <fullName>Texto_de_prueba__c</fullName>
    <label>Texto de prueba</label>
    <length>250</length>
    <type>Text</type>
</CustomField>